--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 body {
 	background: #221f1a;
-	background: transparent url(img/back1.jpg);
+	background: url(../img/back1.jpg);
 	font-family: 'Open Sans Condensed', serif;
 	font-weight: 300;
 	font-size: 16px;
@@ -20,7 +20,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
     font-family: 'Open Sans Condensed';
-	color: #ccccccff;
+	color: #a2a2a2;
 	margin-bottom: 10px;
 	margin-top: 25px;
 	    text-align: center;
@@ -28,13 +28,146 @@ h1, h2, h3, h4, h5, h6 {
 
 
 h1 { 
-    font-size: 52px;
+    font-size: 50px;
     line-height: 39px;
     margin-top: 40px;
 }
 
-h3 { 
+h2 { 
     font-size: 35px;
     line-height: 39px;
-    margin-top: 40px;
+    margin-top: 20px;
+}
+
+a { 
+    color: #a2a2a2;
+    text-decoration: none;
+    text-transform: uppercase;
+    -moz-transition-duration: 0.1s;
+    -webkit-transition-duration: 0.1s;
+}
+
+a:hover, a:focus { 
+    color: #fff;
+}
+
+/* top menu */
+
+nav {
+	margin: auto;
+        text-align: center;
+	}
+
+nav a {
+    text-decoration: none;
+}
+
+nav ul {
+    display: inline-block;
+    text-align: justify;
+}
+
+nav li {
+    list-style-position: inside;
+    font: 35px 'Open Sans Condensed';
+}
+
+.top-menu li {
+    display: inline-block;
+    padding: 10px 10px;
+}
+
+.top-menu li.active {
+     color: #e0e0e0;
+}
+
+.top-menu li.inactive {
+     color: #e0e0e0;
+}
+
+nav li:hover {
+    color: #fff;
+}
+
+/* logo */
+
+#logo {
+	display: block;
+	margin: 15% auto 10px;
+        text-align: center;
+	width: 130px;
+	height: 145px;
+	background: url(../img/logo.svg);>
+	}
+
+
+/* social block */
+
+.social {
+    text-align: center;
+    text-decoration: none;
+    margin: 0;
+    font-size: 25px;
+    padding: 10px 10px;
+    	}
+
+.social ul {
+    margin: 0;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+.social li{
+    margin: 0;
+    display: inline-block;
+    list-style: none;
+    padding: 10px 10px;
+}
+
+.social li:hover {
+    color: #fff;
+}
+
+/* shared block */
+
+p, ul, ol {
+    margin: 0 0 20px;
+}
+
+ul, ol {
+    margin-left: 40px;
+}
+
+ul li {
+    list-style: disc;
+}
+
+ol li {
+    list-style: decimal;
+}
+
+em { 
+    font-style: italic; 
+}
+
+strong { 
+    font-weight: bold; 
+}
+
+small {
+     font-size: 14px;
+}
+
+code, pre {
+    font-family: 'Source Sans Pro', monospace;
+    text-rendering: optimizeLegibility;
+    font-size: 18px;
+    letter-spacing: 0.1em;
+    margin: 0 0.1em;
+}
+
+#wrapper {
+	max-width: 900px;
+        margin: auto;
 }
