--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ nav li:hover {
 
 #logo {
 	display: block;
-	margin: 10% auto 100px;
+	margin: 15% auto 100px;
         text-align: center;
 	width: 155px;
 	height: 175px;
@@ -109,19 +109,19 @@ nav li:hover {
     text-align: center;
     text-decoration: none;
     margin: 30px auto;
-    font-size: 32px;
-    padding: 3%;
     	}
 
 .social ul {
-    margin: 0;
+    margin: 30px auto;
     display: inline-block;
     text-align: center;
     width: 100%;
 }
 
 .social li{
+    font-size: 24px;
     font-family: 'FontAwesome';
+ `  opacity: 0.7;
     margin: auto;
     width: 35px;
     height: 35px;
