--- a/css/backpages.css
+++ b/css/backpages.css
@@ -6,7 +6,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 body {
 	background: #ffffff;
-	background: transparent url(http://mbchurch.org.au/wp-content/uploads/2014/10/4169917139_a63268f7f6.jpg);
+	background: transparent url(../img/back2.jpg);
 	font-family: 'PT Sans', serif;
 	font-weight: 400;
 	font-size: 16px;
