--- a/css/backpages.css
+++ b/css/backpages.css
@@ -19,47 +19,84 @@ body {
 *********************************************************************************************/
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: 400;
-    font-family: 'Neucha';
-	color: #000000;
+    font-family: 'Open Sans Condensed';
+	color: #464646;
 	margin-bottom: 10px;
 	margin-top: 25px;
-	    text-align: center;
 }
 
 
 h1 { 
-    font-size: 32px;
+    font-size: 45px;
     line-height: 39px;
     margin-top: 40px;
 }
 
-h1:after {
-    content:' ';
-    margin-top: 4px;
-    display:block;
-    border:1px solid #f2f2f2;
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
-}
-
 h2 { 
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 30px;
+    line-height: 39px;
+    margin-top: 20px;
 }
 
-h3 { 
+a { 
+    color: #464646;
+    text-decoration: none;
+    text-transform: uppercase;
+    -moz-transition-duration: 0.1s;
+    -webkit-transition-duration: 0.1s;
+}
+
+a { 
+    color: #fff;
+    background: #464646;
+    font-size: 12px;
+    padding: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    -moz-transition-duration: 0.1s;
+    -webkit-transition-duration: 0.1s;
+}
+
+a:hover, a:focus { 
+    background: #868686;
+}
+
+code, pre {
+    font-family: 'Source Sans Pro', monospace;
+    text-rendering: optimizeLegibility;
     font-size: 18px;
-    line-height: 28px;
+    letter-spacing: 0.1em;
+    margin: 0 0.1em;
 }
 
-h3, h4 { 
-    margin-top: 16px;
+img {
+    background: #fff;	
+    width: 100%;
+    max-width: 490px;
+    max-height: 490px;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 12px;
+    padding: 3px;
+    border:1px solid #e5e5e5;
+    display:block;
 }
+
+p {
+    max-width: 600px;
+    text-align: center;
+    }
+
+.wrapper {
+    width: 500px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    margin: auto auto 50px auto;
+    text-align: center;
+}
+
+/* shared block */
 
 p, ul, ol {
     margin: 0 0 20px;
@@ -89,299 +126,9 @@ small {
      font-size: 14px;
 }
 
-a { 
-    color: #fff;
-    background: #33777d;
-    font-size: 12px;
-    padding: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    -moz-transition-duration: 0.1s;
-    -webkit-transition-duration: 0.1s;
-}
-
-a:hover, a:focus { 
-    background: #3c8b92;
-}
-
 code, pre {
     font-family: 'Source Sans Pro', monospace;
     text-rendering: optimizeLegibility;
     font-size: 18px;
     letter-spacing: 0.1em;
     margin: 0 0.1em;
-}
-
-img {
-    background: #fff;	
-    max-width: 400px;
-    max-height: 400px;
-    text-align: center;
-    margin: auto;
-    margin-bottom: 7px;
-    padding: 3px;
-    border:1px solid #e5e5e5;
-    display:block;
-}
-
-p {
-    text-align: center;
-    }
-
-#wrapper {
-    max-width: 400px;
-    margin: auto;
-    text-align: center;
-}
-/* Buttons
-*********************************************************************************************/
-
-.button {
-    background-color: #fbfbfb;
-    border: 1px solid #ebebeb;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: 300;
-    border-radius: 40px;
-    color: #9b9b9b;
-    float: left;
-    margin: 0 0 10px 0;
-    padding: 8px 20px 9px;
-    
-}
-
-.button.small {
-    padding: 0px 12px 1px;
-    float: right;
-    margin: 5px 0 3px 0;
-}
-
-.button:hover {
-    color: #9b9b9b;
-    text-shadow: none;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-}
-
-ul.actions {
-    width: 100%;
-    float: left;
-    margin: 0;
-}
-
-ul.actions li {
-    width: 100%;
-    float: left;
-    margin-top: 3px;
-    list-style: none;
-}
-
-/* Meta
-*********************************************************************************************/
-
-.meta {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 14px;
-    line-height: 19px;
-    font-weight: 300;
-    color: #b3b3b1;
-    text-align: right;
-}
-
-.meta ul {
-    border-right: 1px solid #ebebeb;
-    width: 100%;
-    float: right;
-    margin-right: 14px;
-    padding: 20px 0 26px;
-    position: relative;
-}
-
-.meta ul li {
-    list-style: none;
-}
-
-.meta ul li span {
-    color: #ebebeb;
-}
-
-.meta ul li:after { 
-    color: #ebebeb;
-    content: " -";
-}
-
-.meta ul li:last-child { 
-    border-radius: 50%;
-    background-color: #fbfbfb;
-    border: 1px solid #ebebeb;
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    right: -6px;
-    bottom: -6px;
-}
-
-.meta ul li:last-child:after { 
-    content:"";
-}
-
-.meta ul li:first-child { 
-    font-weight: 400;
-}
-
-.meta a {
-    color: #b3b3b1;
-}
-
-.meta a:hover {
-    color: #303030;
-}
-
-.thumbnail {
-    background-color: #fbfbfb;
-    border: 1px solid #ebebeb;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    padding: 5px;
-    float: right;
-    margin-right: -21px;
-    -moz-transition-duration: 0.05s;
-    -webkit-transition-duration: 0.05s;
-}
-
-.not-found .thumbnail {
-    background-color: #404040;
-    border-color: #404040;
-}
-
-.thumbnail img {
-    border-radius: 50%;
-    width: 100%;
-    height: 100%;
-}
-
-/* Powered by Dropplets
-*********************************************************************************************/
-
-.powered-by {
-    border-radius: 3px;
-    background-color: #000000;
-    color: #ffffff;
-    font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
-    font-size: 12px;
-    position: fixed;
-    display: block;
-    padding: 2px 10px;
-    bottom: 10px;
-    right: 10px;
-    cursor: pointer;
-    opacity: 0.3;
-}
-
-.powered-by:hover {
-    color: #ffffff;
-    opacity: 0.8;
-}
-
-.powered-by img {
-    height: 15px;
-    float: left;
-    margin: 5px 5px 0 -2px;
-}
-
-/* XL
-*********************************************************************************************/
-
-@media (max-width: 980px) {
-
-    /* Buttons
-    *****************************************************************************************/
-    
-    .button {
-        font-size: 12px;
-        line-height: 17px;
-        padding: 8px 20px 9px;
-        
-    }
-    
-    /* Meta
-    *****************************************************************************************/
-    
-    .meta {
-        font-size: 12px;
-        line-height: 17px;
-    }
-    
-}
-
-/* L
-*********************************************************************************************/
-
-@media (max-width: 820px) {
-    
-    /* Setup
-    *****************************************************************************************/
-    
-    body {
-    	font-size: 14px;
-    	line-height: 23px;
-    }
-    
-    /* Typography
-    *****************************************************************************************/
-    
-    h1, h2 { 
-        font-size: 18px;
-        line-height: 29px;
-    }
-    
-    h3, h4 { 
-        font-size: 14px;
-        line-height: 23px;
-    }
-    
-    p {
-        max-width: 100%;
-    }
-    
-}
-
-/* M
-*********************************************************************************************/
-
-@media (max-width: 640px) {
-
-    /* Meta
-    *****************************************************************************************/
-    
-    .meta {
-        display: none;
-    }
-    
-    /* Posts
-    *****************************************************************************************/
-    
-    .post p, 
-    .post ul, 
-    .post ol {
-        max-width: 100%;
-    }
-    
-}
-
-/* XS
-*********************************************************************************************/
-
-@media (max-width: 400px) {
-    
-    /* Articles
-    *****************************************************************************************/
-    
-    article {
-        padding: 40px 0;
-    }
-    
-    
-}
