--- a/css/backpages.css
+++ b/css/backpages.css
@@ -89,7 +89,7 @@ p {
     }
 
 .wrapper {
-    width: 500px;
+    max-width: 500px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
     margin: auto auto 50px auto;
