--- a/css/backpages.css
+++ b/css/backpages.css
@@ -46,7 +46,7 @@ a {
     -webkit-transition-duration: 0.1s;
 }
 
-a { 
+p a { 
     color: #fff;
     background: #464646;
     font-size: 12px;
@@ -58,7 +58,7 @@ a {
     -webkit-transition-duration: 0.1s;
 }
 
-a:hover, a:focus { 
+p a:hover, p a:focus { 
     background: #868686;
 }
 
