--- a/css/backpages.css
+++ b/css/backpages.css
@@ -27,9 +27,11 @@ h1, h2, h3, h4, h5, h6 {
 
 
 h1 { 
+	margin: 0;
     font-size: 45px;
     line-height: 39px;
-    margin-top: 40px;
+    padding-top: 40px;
+    padding-bottom: 20px;
 }
 
 h2 { 
@@ -45,6 +47,14 @@ a {
     -moz-transition-duration: 0.1s;
     -webkit-transition-duration: 0.1s;
 }
+
+
+p {
+    max-width: 600px;
+    text-align: center;
+    padding-bottom: 10px;
+    margin: 0;
+    }
 
 p a { 
     color: #fff;
@@ -72,7 +82,6 @@ code, pre {
 
 img {
     background: #fff;	
-    width: 100%;
     max-width: 490px;
     max-height: 490px;
     text-align: center;
@@ -83,11 +92,6 @@ img {
     display:block;
 }
 
-p {
-    max-width: 600px;
-    text-align: center;
-    }
-
 .wrapper {
     max-width: 500px;
     background: rgba(255, 255, 255, 0.2);
@@ -97,10 +101,6 @@ p {
 }
 
 /* shared block */
-
-p, ul, ol {
-    margin: 0 0 20px;
-}
 
 ul, ol {
     margin-left: 40px;
