--- a/css/menu.css
+++ b/css/menu.css
@@ -1,10 +1,10 @@
 /* top menu */
 
 nav {
-	margin: 30px auto 0;
+	margin: 30px auto 30px;
         text-align: justify;
 	max-width: 500px;
-	}
+		}
 
 nav a {
     text-decoration: none;
