--- a/css/backpages.css
+++ b/css/backpages.css
@@ -90,6 +90,17 @@ img {
     padding: 3px;
     border:1px solid #e5e5e5;
     display:block;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.img-avatar {
+background: url(../img/avatar.jpg);
+border: solid 0px;
+width: 200px;
+height: 200px;
+border-radius: 100px;
+margin: auto auto 17px;
+box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .wrapper {
