--- a/css/main.css
+++ b/css/main.css
@@ -102,10 +102,6 @@ logo {
 
 /* shared block */
 
-p, ul, ol {
-    margin: 0 0 20px;
-}
-
 ul, ol {
     margin-left: 40px;
 }
@@ -154,7 +150,7 @@ footer {
   height: 50px;
 	}
 
-.footer-coppyrights {
+.footer-copyrights {
 	font-family: 'Open Sans Condensed', serif;
 	font-weight: 300;
 	font-size: 16px;
