--- a/css/main.css
+++ b/css/main.css
@@ -63,9 +63,17 @@ logo {
         text-align: center;
 	width: 155px;
 	height: 175px;
-	background: url(../img/logo.svg);>
+	background: url(../img/logo.svg);
+	opacity: 0.3;
 	}
 
+logo:hover , logo:focus {
+   -moz-transform: rotate(180deg); /* Для Firefox */
+    -ms-transform: rotate(180deg); /* Для IE */
+    -webkit-transform: rotate(180deg); /* Для Safari, Chrome, iOS */
+    -o-transform: rotate(180deg); /* Для Opera */
+    transform: rotate(180deg);
+	}
 
 /* social block */
 
@@ -97,7 +105,10 @@ logo {
 
 .social li:hover {
     opacity: 0.9;
-    font-size: 31px;
+    transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    -moz-transform: scale(1.5s);
 }
 
 /* shared block */
@@ -132,6 +143,20 @@ code, pre {
     font-size: 18px;
     letter-spacing: 0.1em;
     margin: 0 0.1em;
+}
+
+.animation {
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+}
+
+.slowanimation {
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
 }
 
 .wrapper {
