--- a/css/menu.css
+++ b/css/menu.css
@@ -27,11 +27,15 @@ nav li {
     width: 70px;
     padding: 2px 10px;
     margin: 0 2px 0 2px;
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
 }
 
 
 nav li:hover {
-     opacity: 1.0;
+    opacity: 0.9;
 }
 
 nav li.active {
