--- a/css/menu.css
+++ b/css/menu.css
@@ -27,17 +27,21 @@ nav li {
     width: 70px;
     padding: 2px 10px;
     margin: 0 2px 0 2px;
-    transition: all 0.3s ease-in-out;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
 }
 
 
 nav li:hover {
     opacity: 0.9;
+    color: #fff;
+    background: #e8e8e8;
+    text-shadow: 0 0 1em #e8e8e8;
 }
 
 nav li.active {
-opacity: 0.8;
+opacity: 0.9;
+background: #e8e8e8;
 }
