--- a/css/main.css
+++ b/css/main.css
@@ -186,9 +186,10 @@ footer {
         text-align: center;
 	position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -50;
   width: 100%;
   height: 50px;
+  padding-top: 5px;
 	}
 
 .footer-copyrights {
