--- a/css/menu.css
+++ b/css/menu.css
@@ -2,7 +2,7 @@
 
 nav {
 	margin: 30px auto 30px;
-        text-align: justify;
+    text-align: center;
 	max-width: 500px;
 		}
 
@@ -18,7 +18,6 @@ nav ul {
 }
 
 nav li {
-    text-align: center;
     display: inline-block;
     border: solid 1.5px #464646;
     opacity: 0.5;
@@ -26,7 +25,7 @@ nav li {
     font: 24px 'Open Sans Condensed';
     width: 70px;
     padding: 2px 10px;
-    margin: 0 2px 0 2px;
+    margin: 0 2px 5px 2px;
     transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
