--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ margin: 0;
 
 logo {
 	display: block;
-	margin: 5% auto 5%;
+	margin: 5% auto 80px;
         text-align: center;
 	width: 155px;
 	height: 175px;
