--- a/css/backpages.css
+++ b/css/backpages.css
@@ -95,6 +95,17 @@ img {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
+.wrapper {
+    max-width: 450px;
+/*    background: rgba(255, 255, 255, 0.2); */
+    border-radius: 5px;
+    margin: auto auto 50px auto;
+    text-align: justify;
+}
+
+
+/* aboutme block */
+
 .img-avatar {
 background: url(../img/avatar.jpg);
 border: solid 0px;
@@ -106,25 +117,19 @@ display:block;
 border-radius: 100px;
 margin: auto auto 17px;
 box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
 }
-
-.wrapper {
-    max-width: 500px;
-/*    background: rgba(255, 255, 255, 0.2); */
-    border-radius: 5px;
-    margin: auto auto 50px auto;
-    text-align: justify;
-}
-
-
-/* aboutme block */
 
 .img-avatar:hover ,.img-avatar:focus {
 /* -moz-transform: rotate(15deg); /* Для Firefox */ 
 /*    -ms-transform: rotate(15deg);  */ /* Для IE */
 /*    -webkit-transform: rotate(15deg); /* Для Safari, Chrome, iOS */
 /*    -o-transform: rotate(15deg);  */ /* Для Opera */
-/*    transform: rotate(15deg); */
+/* transform: rotate(360deg); */
+box-shadow: 0 0 1.5em #999999;
 }
 
 .info {
@@ -133,6 +138,14 @@ text-align: center;
 
 .info strong: {
 font-family: 'Open Sans Condensed';
+}
+
+.interests ul {
+margin-left: 10px;
+}
+
+.cvalifications ul {
+margin-left: 10px;
 }
 
 .interests li {
@@ -184,6 +197,7 @@ padding-top: 10px;
 
 .emailme a:hover { 
     background: #6ab26d;
+    box-shadow: 0 0 1em #999999;
     }
 
 /* shared block */
@@ -191,10 +205,6 @@ padding-top: 10px;
 strong {
     font-family: 'Open Sans Condensed';
     color: #464646;
-}
-
-ul, ol {
-    margin-left: 40px;
 }
 
 ul li {
