--- a/css/menu.css
+++ b/css/menu.css
@@ -37,7 +37,7 @@ nav li:hover {
     opacity: 0.9;
     color: #fff;
     background: rgba(232,232,232,0.5);
-    text-shadow: 0 0 1em #e0e0e0;
+    box-shadow: 0 0 0.5em #999999;
     cursor: pointer;
 }
 
