--- a/css/backpages.css
+++ b/css/backpages.css
@@ -124,11 +124,6 @@ box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .img-avatar:hover ,.img-avatar:focus {
-/* -moz-transform: rotate(15deg); /* Для Firefox */ 
-/*    -ms-transform: rotate(15deg);  */ /* Для IE */
-/*    -webkit-transform: rotate(15deg); /* Для Safari, Chrome, iOS */
-/*    -o-transform: rotate(15deg);  */ /* Для Opera */
-/* transform: rotate(360deg); */
 box-shadow: 0 0 1.5em #999999;
 }
 
@@ -204,6 +199,27 @@ padding-top: 10px;
     }
 
 /* links block */
+
+.img-link {
+background: url(../img/links.jpg);
+border: solid 0px;
+width: 200px;
+height: 200px;
+padding: 3px;
+border:1px solid #e5e5e5;
+display:block;
+border-radius: 100px;
+margin: auto auto 17px;
+box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+}
+
+.img-link:hover ,.img-avatar:focus {
+box-shadow: 0 0 1.5em #999999;
+}
 
 .projects a:hover{
 border-bottom: 1px dotted #999999;
