--- a/css/main.css
+++ b/css/main.css
@@ -75,18 +75,24 @@ logo:hover , logo:focus {
     opacity: 0.3;
 	}
 
-.linkabout {
+/* .linkabout {
     margin-top: 0;
     color: black;
     transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
+} */
+
+.linkabout i{
+font-size: 115%;
+line-height: 1.3;
 }
 
-.linkabout:hover {
-text-shadow: 0 0 1em #999999;
+
+.linkabout:hover{
 cursor: pointer;
+border-bottom: 1px dotted #999999;
 }
 
 /* social block */
