--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ margin: 0;
 
 logo {
 	display: block;
-	margin: 5% auto 80px;
+	margin: 7% auto 7%;
         text-align: center;
 	width: 155px;
 	height: 175px;
